# QC-pipeline

./: .cproject  .project  README
Database/: UniVec_Core
Debug/: MiSeq_Ecoli_DH10B_110721_PF_R1_matches_UniVec_Core  QC-pipeline  config.inp  makefile  objects.mk  sources.mk
Debug/src/: QcException.d  aho_corasick.d  alignment_trie.d  database.d  edit_distance.d  fasta_reader.d  job_wrappers.d  local_alignment.d  main.d  output.d  running_modes.d  ssw.d  ssw_cpp.d  subdir.mk  utils.d
Debug/src/SPAdes/: config_struct_hammer.d  kmer_data.d  subdir.mk
Debug/src/SPAdes/io/: parser.d  path_helper.d  subdir.mk
Debug/src/SPAdes/mph_index/: MurmurHash3.d  mph_bits.d  mph_index.d  subdir.mk  trigraph.d
include/: QcException.h  aho_corasick.h  comparator.h  database.h  edit_distance.h  fasta_reader.h  hammer_kmer_splitter.h  job_wrappers.h  local_alignment.h  output.h  running_modes.h
include/SPAdes/: stacktrace.hpp  verify.hpp
include/SPAdes/io/: fasta_fastq_gz_parser.hpp  ireadstream.hpp  mmapped_writer.hpp  read.hpp  read_processor.hpp
include/SPAdes/logger/: log_writers.hpp  logger.hpp  logger_impl.hpp
include/SPAdes/mph_index/: kmer_index.hpp  seeded_hash.h
include/SPAdes/omni/: graph_component.hpp  id_track_handler.hpp
include/SPAdes/sequence/: nucl.hpp
src/: CMakeLists.txt  QcException.cpp  aho_corasick.cpp  config.inp  database.cpp  edit_distance.cpp  fasta_reader.cpp  job_wrappers.cpp  local_alignment.cpp  main.cpp  output.cpp  running_modes.cpp  utils.cpp
src/SPAdes/: CMakeLists.txt  config.inp  config_struct_hammer.cpp  config_struct_hammer.hpp  kmer_data.cpp  kmer_stat.hpp  valid_kmer_generator.hpp
src/SPAdes/io/: CMakeLists.txt
src/SPAdes/mph_index/: CMakeLists.txt
